--- a/eSocium.Web/eSocium.Web/Web.config
+++ b/eSocium.Web/eSocium.Web/Web.config
@@ -20,6 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization uiCulture="auto" culture="auto"/>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
@@ -57,6 +58,7 @@
       </providers>
     </sessionState>
   </system.web>
+  
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
