--- a/eSocium.Web/eSocium.Web/eSocium.Web.csproj
+++ b/eSocium.Web/eSocium.Web/eSocium.Web.csproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\Dictionary\DictionaryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OpenQuestions\OpenController.cs" />
@@ -146,6 +147,17 @@
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Globalization.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Globalization.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\Globalization.ru.Designer.cs">
+      <DependentUpon>Globalization.ru.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Utility\CultureHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -177,11 +189,32 @@
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\cultures\globalize.culture.en-029.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-AU.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-BZ.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-CA.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-GB.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-IE.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-IN.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-JM.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-MY.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-NZ.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-PH.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-SG.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-TT.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-US.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-ZA.js" />
+    <Content Include="Scripts\cultures\globalize.culture.en-ZW.js" />
+    <Content Include="Scripts\cultures\globalize.culture.ru-RU.js" />
+    <Content Include="Scripts\cultures\globalize.culture.ru.js" />
+    <Content Include="Scripts\cultures\globalize.cultures.js" />
+    <Content Include="Scripts\globalize.js" />
     <Content Include="Scripts\jquery-1.6.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.2.js" />
     <Content Include="Scripts\jquery-1.6.2.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <Content Include="Scripts\jquery.cookie.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
@@ -239,6 +272,19 @@
   <ItemGroup>
     <Content Include="Views\Dictionary\Index.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Globalization.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Globalization.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Globalization.ru.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Globalization.ru.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_SelectLanguage.cshtml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -256,7 +302,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>4105</DevelopmentServerPort>
+          <DevelopmentServerPort>4457</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
