--- a/eSocium.Web/eSocium.Web/eSocium.Web.csproj
+++ b/eSocium.Web/eSocium.Web/eSocium.Web.csproj
@@ -38,6 +38,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.4.3.1\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="EPPlus">
+      <HintPath>..\packages\EPPlus\lib\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -134,7 +137,8 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\Dictionary\DictionaryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\OpenQuestions\OpenController.cs" />
+    <Compile Include="Controllers\OpenQuestions\OpenPollController.cs" />
+    <Compile Include="Controllers\OpenQuestions\OpenQuestionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -143,6 +147,8 @@
     <Compile Include="Models\DAL\UserInitializer.cs" />
     <Compile Include="Models\eSocMembership.cs" />
     <Compile Include="Models\eSocRoleProvider.cs" />
+    <Compile Include="Models\OpenQuestions\DAL\OpenContext.cs" />
+    <Compile Include="Models\OpenQuestions\Poll.cs" />
     <Compile Include="Models\PasswordHash.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
@@ -261,7 +267,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\Dictionary\" />
-    <Folder Include="Models\OpenQuestions\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -284,6 +289,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_SelectLanguage.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\OpenPoll\Create.cshtml" />
+    <Content Include="Views\OpenPoll\Delete.cshtml" />
+    <Content Include="Views\OpenPoll\Details.cshtml" />
+    <Content Include="Views\OpenPoll\Edit.cshtml" />
+    <Content Include="Views\OpenPoll\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\OpenQuestion\Create.cshtml" />
+    <Content Include="Views\OpenQuestion\Delete.cshtml" />
+    <Content Include="Views\OpenQuestion\Details.cshtml" />
+    <Content Include="Views\OpenQuestion\Edit.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
