ввод открытых вопросов работает авторизация под MS IE не работает

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ Thumbs.db
 *.log
 *.lib
 *.sbr
+#Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
 [Dd]ebug*/
